# shakeit

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  ros_entrypoint.sh
docs/: shakeit.drawio
ros_pkg_ws/: .gitignore  setup.bash_example
ros_pkg_ws/src/: src_dependencies.rosinstall
ros_pkg_ws/src/shakeit_adapter/: README.md  package.xml  setup.cfg  setup.py
ros_pkg_ws/src/shakeit_adapter/kuka_ctrl_programs/EthernetKRL/: ShakeitCtrlChannel.xml
ros_pkg_ws/src/shakeit_adapter/kuka_ctrl_programs/R1/Program/Shakeit/: shakeit.src  shakeit_sim.src  shakeitctrl.sub  shakeitv2.src
ros_pkg_ws/src/shakeit_adapter/launch/: robot_camera_test.launch.py  sensopart.launch.py
ros_pkg_ws/src/shakeit_adapter/shakeit_adapter/: fake_robot_node.py  kuka_adapter.py  pim60_adapter.py  sensopart_adapter.py
ros_pkg_ws/src/shakeit_adapter/shakeit_adapter/manual_tests/: robot_camera_test_node.py
ros_pkg_ws/src/shakeit_adapter/test/: test_fake_robot.py
ros_pkg_ws/src/shakeit_core/: README.md  package.xml  setup.cfg  setup.py
ros_pkg_ws/src/shakeit_core/launch/: real_control.launch.py  real_pipeline.launch.py  sim_control.launch.py  sim_pipeline.launch.py
ros_pkg_ws/src/shakeit_core/shakeit_core/: control_node.py  free_object_node.py  rl_node.py  stats_node.py  viz_node.py
ros_pkg_ws/src/shakeit_core/shakeit_core/actions/: __init__.py  action.py  move_action.py  shake_action.py
ros_pkg_ws/src/shakeit_core/shakeit_core/util/: __init__.py  shakeit_node.py
ros_pkg_ws/src/shakeit_experiments/: package.xml  setup.cfg  setup.py
ros_pkg_ws/src/shakeit_experiments/launch/: run_experiment.launch.py  run_sim_experiment.launch.py
ros_pkg_ws/src/shakeit_experiments/shakeit_experiments/: performance_metric.py
ros_pkg_ws/src/shakeit_fiware/: package.xml  setup.cfg  setup.py
ros_pkg_ws/src/shakeit_fiware/shakeit_fiware/: fiwaremanager.py
ros_pkg_ws/src/shakeit_interfaces/: CMakeLists.txt  README.md  package.xml
ros_pkg_ws/src/shakeit_interfaces/action/: FreeObjects.action  Pick.action  SeparateObjects.action  Trigger.action
ros_pkg_ws/src/shakeit_interfaces/msg/: ActionInfo.msg  Observation.msg  Plot.msg  Update.msg
ros_pkg_ws/src/shakeit_interfaces/srv/: Act.srv  Move.srv  Shake.srv
ros_pkg_ws/src/shakeit_kuka_kr6_workcell/: CMakeLists.txt  package.xml
ros_pkg_ws/src/shakeit_kuka_kr6_workcell/launch/: shakeit_kuka_kr6_workcell.launch.py  shakeit_kuka_kr6_workcell.rviz
ros_pkg_ws/src/shakeit_kuka_kr6_workcell/meshes/: celle.dae  celle_visual.stl  kr6_siegmund16_adapter.stl  sides_collision.stl  weibel_gripper.stl
ros_pkg_ws/src/shakeit_kuka_kr6_workcell/urdf/: kuka_kr6_with_adapter.urdf.xacro  shakeit_kuka_kr6_workcell.urdf.xacro
ros_pkg_ws/src/shakeit_models/: README.md  package.xml  setup.cfg  setup.py
ros_pkg_ws/src/shakeit_models/launch/: a2c_training.launch.py  d3qn_training.launch.py  dqn_training.launch.py  hardcoded_node.launch.py  random_node.launch.py
ros_pkg_ws/src/shakeit_models/shakeit_models/: a2c_node.py  d3qn_node.py  dqn_node.py  hardcoded_node.py  model.py  random_node.py
ros_pkg_ws/src/shakeit_sim/: README.md  package.xml  setup.cfg  setup.py
ros_pkg_ws/src/shakeit_sim/assets/: vibrating_feeder_real.ttt  (+1 more)
sensopart/: 2020-10-08_11h01m_Robotic_jobset.job
(+35 files in other folders)
