<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>shakeit_core</name>
  <version>0.1.0</version>
  <description>TODO: Package description</description>
  <maintainer email="rlh@teknologisk.dk">rlh</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>action_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>shakeit_interfaces</depend>
  <depend>anyfeeder_interfaces</depend>
  <depend>python3-opencv</depend>
  <depend>python3-numpy</depend>
  <depend>python-keras-pip</depend>
  <depend>python-tensorflow-pip</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
